--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <div class="item">2</div>
   <div class="item">3</div>
   <div class="item">4</div>
+  <footer>
+    <p>pie de pagina</p>
+  </footer>
 </div>
 </body>
 </html>
